<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.srcoop.android.activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_top2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#2e3f4e"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#2e3f4e" >

            <Button
                android:id="@+id/task_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_back" />

            <EditText
                android:id="@+id/task_textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:padding="7dp"
                 android:maxLength="20"
                android:textColor="#FFF"
                android:editable="false"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_task_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_edit" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/background_fragment"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/task_textview_carrier"
                    style="@style/task_textview_label"
                    android:text="@string/task_carrier" />

                <Button
                    android:id="@+id/task_button_addcarrier"
                    style="@style/task_activity_button" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2e3f4e" />

            <com.coop.android.activity.view.HorizontalListView
                android:id="@+id/task_listview_carrier"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="1dp"
                android:requiresFadingEdge="horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2e3f4e" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp" >

                <TextView
                    android:id="@+id/task_textview_assignemnt"
                    style="@style/task_textview_label"
                    android:text="@string/task_assignment" />

                <Button
                    android:id="@+id/task_button_addassign"
                    style="@style/task_activity_button" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2e3f4e" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ListView
                    android:id="@+id/task_listView_assigns"
                    android:layout_width="match_parent"
                    android:divider="#000000"
                    android:dividerHeight="0.0dip"
                    android:layout_height="wrap_content" >
                </ListView>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/task_textview_time"
            android:text="目前已用时间为:" />

        <TextView
            android:id="@+id/task_textview_time"
            style="@style/task_textview_time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/layout_reference"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_button2"
            android:descendantFocusability="blocksDescendants" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="7dp"
                android:text="@string/task_reference"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/btn_reference_detail"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/display_detail" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#2e3f4e" />

        <RelativeLayout
            android:id="@+id/layout_discussion"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_button2"
            android:descendantFocusability="blocksDescendants" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="7dp"
                android:text="@string/task_problem"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/btn_discussion_detail"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/display_detail" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>